<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_imageLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_app_update" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <com.heaven.vegetable.custom.MyTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_update_title"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <com.heaven.vegetable.custom.MyTextView
            android:id="@+id/text_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_update_subtitle"
            android:textColor="#ff000000"
            android:textSize="15sp" />


        <LinearLayout
            android:id="@+id/ll_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_green"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="8dp">

            <com.heaven.vegetable.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>