<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            <include-->
            <!--                android:id="@+id/view_toolbar"-->
            <!--                layout="@layout/toolbar_back_arrow_white" />-->

<!--            <FrameLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="180dp"-->
<!--                android:scaleType="centerCrop" />-->

            <ImageView
                android:id="@+id/iv_icon1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/background_sign_in"
                android:tint="#75000000" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:src="@mipmap/ic_logo"
                app:civ_border_color="@color/circular_pic_border"
                app:civ_border_width="1dp"/>

<!--            <ImageView-->
<!--                android:id="@+id/iv_icon"-->
<!--                android:layout_width="90dp"-->
<!--                android:layout_height="90dp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="160dp"-->
<!--                android:src="@mipmap/ic_logo" />-->

            <LinearLayout
                android:id="@+id/ll_logoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.heaven.vegetable.custom.MyTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heaven"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/orange_500" />

                <com.heaven.vegetable.custom.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="9dp"
                    android:text="@string/vegetable_delivery"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <com.heaven.vegetable.custom.MyTextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:text="@string/get_started_with_mobile"
                    android:textColor="@color/main_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_text"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <com.heaven.vegetable.custom.MyEditText
                        android:id="@+id/et_mobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:gravity="left"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/et_fname"
                        android:padding="15dp"
                        android:textColor="@color/main_text"
                        android:textColorHint="@color/hint_gray"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#dad8d8" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_nameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_mobileNo"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ll_fname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_text"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.heaven.vegetable.custom.MyEditText
                            android:id="@+id/et_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusForward="@+id/et_lname"
                            android:padding="15dp"
                            android:textColor="@color/main_text"
                            android:textColorHint="@color/hint_gray"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="#dad8d8" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_lname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_text"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.heaven.vegetable.custom.MyEditText
                            android:id="@+id/et_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000"
                            android:hint="@string/last_name"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:padding="15dp"
                            android:textColor="@color/main_text"
                            android:textColorHint="@color/hint_gray"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="#dad8d8" />

                    </LinearLayout>

                </LinearLayout>

                <!--                <TextView-->
                <!--                    android:id="@+id/tv_signIn"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginBottom="25dp"-->
                <!--                    android:layout_marginLeft="120dp"-->
                <!--                    android:layout_marginRight="120dp"-->
                <!--                    android:layout_marginTop="40dp"-->
                <!--                    android:layout_below="@+id/ll_nameDetails"-->
                <!--                    android:background="@color/colorPrimaryDark"-->
                <!--                    android:gravity="center"-->
                <!--                    android:padding="9dp"-->
                <!--                    android:text="Sign in"-->
                <!--                    android:textColor="@color/white"-->
                <!--                    android:textSize="16dp" />-->


                <LinearLayout
                    android:id="@+id/ll_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_nameDetails"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rectangle_blue"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <com.heaven.vegetable.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Confirm"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
