<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="#fff">

                <!-- Cover Image -->

                <!--                <ImageView-->
                <!--                    android:id="@+id/image"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="200dp"-->
                <!--                    android:scaleType="fitXY"-->
                <!--                    android:src="@mipmap/ic_profile_banner" />-->

                <com.intrusoft.library.FrissonView
                    android:id="@+id/wave_head"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    app:alphaValue="70"
                    app:autoTint="true"
                    app:gradient_endColor="#cc000000"
                    app:gradient_startColor="#00000000"
                    app:src="@mipmap/ic_profile"
                    app:tideCount="3"
                    app:tideHeight="50dp"
                    app:tintColor="@color/dark_red" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:src="@mipmap/ic_profile"
                    app:civ_border_color="#cccccc"
                    app:civ_border_width="2dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/main_dark_text"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!--                <com.heaven.vegetable.custom.MyTextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:text="9876543321"-->
                <!--                    android:textColor="@color/gray"-->
                <!--                    android:textSize="14dp" />-->

                <com.heaven.vegetable.custom.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="--------"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="#ACACAC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.heaven.vegetable.custom.MyTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.6"
                        android:padding="18dp"
                        android:text="@string/first_name"
                        android:textSize="15sp" />

                    <com.heaven.vegetable.custom.MyEditText
                        android:id="@+id/et_fname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#00000000"

                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/main_dark_text"
                        android:textSize="15sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ACACAC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.heaven.vegetable.custom.MyTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.6"
                        android:padding="18dp"
                        android:text="@string/last_name"
                        android:textSize="15sp" />

                    <com.heaven.vegetable.custom.MyEditText
                        android:id="@+id/et_lname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"

                        android:background="#00000000"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/main_dark_text"
                        android:textSize="15sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ACACAC" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.heaven.vegetable.custom.MyTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.6"
                        android:padding="18dp"
                        android:text="@string/email"
                        android:textSize="15sp" />

                    <com.heaven.vegetable.custom.MyEditText
                        android:id="@+id/et_emailID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:imeOptions="actionNext"
                        android:inputType="text"

                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/main_dark_text"
                        android:textSize="15sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ACACAC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.heaven.vegetable.custom.MyTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.6"
                        android:padding="18dp"
                        android:text="@string/contact_no"
                        android:textSize="15sp" />

                    <com.heaven.vegetable.custom.MyTextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#00000000"

                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/main_dark_text"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ACACAC" />

                <com.heaven.vegetable.custom.MyTextViewBold
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_profile"
                    android:gravity="center"
                    android:paddingLeft="80dp"
                    android:paddingTop="12dp"
                    android:paddingRight="80dp"
                    android:paddingBottom="12dp"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>



